<resources>
    <!--  Common  -->
    <string name="app_name">CaliberDroid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Revature</string>
    <string name="nav_header_subtitle">info@revature.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="save">Save</string>

    <!--  Menu Items -->
    <string name="menu_quality_audit">Quality Audit</string>
    <string name="menu_assess_batch">Assess Batch</string>
    <string name="menu_manage_batch">Manage Batch</string>
    <string name="menu_locations">Locations</string>
    <string name="menu_trainers">Trainers</string>
    <string name="menu_categories">Categories</string>
    <string name="btn_manage_batch_create_batch">Create Batch</string>

    <!--  Quality Audit & Assess Batch -->
    <string name="week_number">Week %d</string>
    <string name="button_add_week">Add week</string>
    <string name="batch_with_starting_date">%s - %s - %s</string>
    <string name="batch_with_week">%s - %s - Week %d</string>
    <string name="dialog_add_week_title">Add Week</string>
    <string name="dialog_add_week_message">Are you sure you want to add a week? This action can not be undone.</string>
    <string name="add_categories">Add categories</string>
    <string name="spinner_year_hint">Select a year</string>
    <string name="select_a_quarter">Select a quarter</string>
    <string name="no_weeks_message">There are no weeks for this batch. Click add week to get started on a new week.</string>
    <string name="no_batches_message">There are no batches for this year and quarter selection.</string>

    <!--  Quality Audit  -->
    <string name="overall_qc_status">Overall QC Status:</string>
    <string name="overall_qc_feedback">Overall QC feedback for week %d</string>
    <string name="overall_qc_feedback_hint">There is no overall feedback for week %d</string>
    <string name="trainee_qc_feedback_hint">Week %d notes for %s</string>
    <string name="notes">Notes</string>
    <string name="button_add_categories">Categories</string>
    <string name="no_categories_message">No categories added</string>
    <string name="empty_trainees">There are no trainees in this batch</string>

    <!--    Assess Batch-->
    <string name="assessment_type_label">Type:</string>
    <string name="assessment_skill_label">Skill Category:</string>
    <string name="assessment_points_label">Points:</string>
    <string name="assessment_batch_avg_label">Batch Average:</string>
    <string name="grade_format">%.2f%%</string>
    <string name="trainees_grades_label">Trainee Grades:</string>

    <string name="trainee_name_label">Name:</string>
    <string name="trainee_notes_label">Trainee Note:</string>
    <string name="trainee_notes_dialog_hint">Week %d notes for %s</string>
    <string name="trainee_flag_img_description">Flag for a Trainee</string>
    <string name="trainee_assessment_type_and_points">%s - %d</string>

    <string name="title_assessments">Assessments</string>
    <string name="title_trainees">Trainees</string>
    <string name="title_overall">Overall</string>
    <string name="weekly_batch_average_label">Weekly Batch Average:</string>
    <string name="batch_notes_label">Batch notes</string>
    <string name="batch_notes_hint">There is no overall feedback for week %d</string>
    <string name="button_create_assessment">New Assessment</string>
    <string name="dialog_create_assessment">Create Assessment</string>
    <string name="assessment_max_points_error_message">Must be an integer value greater than 0 and less than 1000</string>
    <string name="button_create">Create</string>
    <string name="button_trainee_grades">Grades</string>
    <string name="no_assessments_message">There are no assessments for this week. Add an assessment by clicking New Assessment.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- SETTINGS -->
    <string name="title_add_location">Add Location</string>
    <string name="title_add_category">Add Category</string>
    <string name="title_add_trainer">Add Trainer</string>
    <string name="title_edit_location">Edit Location</string>
    <string name="title_edit_category">Edit Category</string>

    <string name="title_active_status">Active</string>
    <string name="title_stale_status">Stale</string>
    <string name="title_settings_invalid_input">Invalid Input!</string>


    <string name="btn_add_location">Add Location</string>
    <string name="btn_add_trainer">Add Trainer</string>
    <string name="btn_add_category">Add Category</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_add">Add</string>
    <string name="btn_edit">Edit</string>

    <string name="label_dialog_name">Name* </string>
    <string name="title_edit_trainer">Edit Trainer</string>

    <string-array name="trainer_tiers">
        <item>ROLE_INACTIVE</item>
        <item>ROLE_QC</item>
        <item>ROLE_TRAINER</item>
        <item>ROLE_VP</item>
        <item>ROLE_PANEL</item>
        <item>ROLE_STAGING</item>
    </string-array>

    <string name="query_hint_settings_location">Search Location Name</string>
    <string name="query_hint_settings_trainer">Search Trainer Name</string>
    <!-- END SETTINGS -->

    <!-- Manage Batches -->
    <string name="batch_dialog_heading_name">Batch Name:</string>
    <string name="batch_dialog_heading_training_name">Trainer Name:</string>
    <string name="batch_dialog_heading_location">Location:</string>
    <string name="batch_dialog_heading_skill">Skill Focus:</string>
    <string name="batch_dialog_heading_start_date">Start Date: </string>
    <string name="batch_dialog_heading_end_date">End Date: </string>
    <string name="batch_dialog_heading_good_grade">Good Grade:</string>
    <string name="batch_dialog_heading_passing_grade">Passing Grade:</string>
    <string name="batch_dialog_create_button">Update</string>
    <string name="batch_dialog_img_description">Dialog Header background color block</string>
    <string name="textview_default">default</string>
    <string name="batch_info_header_end_date">End Date:</string>
    <string name="batch_info_header_start_date">Start Date:</string>
    <string name="batch_info_header_trainer_name">Trainer Name:</string>
    <string name="batch_info_header_training_name">Training Name:</string>
    <string name="batch_info_heading_batch_name">Batch Name</string>
    <string name="batch_info_heading_location">Location:</string>
    <string name="batch_info_heading_skill">Skill Focus:</string>
    <string name="Revature_String">Revature</string>
    <string name="batch_info_heading_good_grade">Good Grade:</string>
    <string name="batch_info_heading_passing_grade">Passing Grade:</string>
    <string name="batchesInfo_confirmButton">Confirm</string>
    <string name="batchesInfo_cancelButton">Edit Batch</string>

    <!--Trainees-->
    <string name="trainee_name">Trainee Name</string>
    <string name="trainee_first_name">First Name</string>
    <string name="trainee_last_name">Last Name</string>
    <string name="trainee_email">Email Address</string>
    <string name="trainee_batch">Batch</string>
    <string name="trainee_status">Training Status</string>

    <string name="trainee_college">College/University</string>
    <string name="trainee_degree">Degree</string>
    <string name="trainee_major">Major</string>

    <string name="trainee_phone">Phone Number</string>

    <string name="trainee_year">Assigned Year</string>
    <string name="trainee_quarter">Assigned Quarter</string>
    <string name="trainee_score">Tech Score</string>
    <string name="batch_row_batch_name_header">Batch Name:</string>
    <string name="batch_info_co_trainer_heading">Co-Trainer:</string>
    <string name="batch_info_training_type_heading">Training type:</string>
    <string name="batchRow_datesHeader">Date: </string>
    <string name="createBatch_skillHeader">Skill Focus:</string>
    <string name="createBatch_locationHeader">Location:</string>
    <string name="createBatch_trainingTypeHeader">Training Type:</string>
    <string name="manageBatch_noOfBatches">Batches:</string>
    <string name="btn_editBatch_update">Create</string>

    <string name="trainee_project">Project Status</string>
    <string name="trainee_optional_project">Project Status (Optional)</string>
    <string name="trainee_skype">Skype ID</string>
    <string name="trainee_optional_skype">Skype ID (Optional)</string>
    <string name="trainee_profile">Profile URL</string>
    <string name="trainee_optional_profile">Profile URL (Optional)</string>
    <string name="trainee_screener">Tech Screener</string>
    <string name="trainee_optional_screener">Tech Screener (Optional)</string>
    <string name="trainee_recruiter">Recruiter</string>
    <string name="trainee_optional_recruiter">Recruiter (Optional)</string>
    <string name="search">Search</string>
    <string name="batchrow_trainerheader">Trainer:</string>
    <string name="batchrow_cotrainerheader">Co-Trainer:</string>
    <string name="batchrow_goodgrade_header">Good Grade:</string>
    <string name="batchrow_passinggrade_header">Passing Grade:</string>
    <string name="batchrow_expand_arrow_description">Expand Arrow</string>
    <string name="createbatch_cotrainer_header">CoTrainer Name:</string>
    <string name="dialog_yes">yes</string>
    <string name="empty">""</string>
    <string name="optional">Optional</string>
    <string name="btn_add_trainee">Add Trainee</string>
    <string name="btn_update">update</string>
    <string name="createbatch_trainingtype">Training Type:</string>
</resources>
