<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/top_menu">
        <item
            android:id="@+id/nav_quality_audit"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_quality_audit" />
        <item
            android:id="@+id/nav_assess_batch"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_assess_batch" />
        <item
            android:id="@+id/nav_manage_batch"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_manage_batch" />
    </group>
    <group android:id="@+id/bottom_menu">
        <item
            android:id="@+id/nav_locations"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_locations" />
        <item
            android:id="@+id/nav_trainers"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_trainers" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_categories" />
    </group>
</menu>
