<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                style="@style/settingsFieldHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trainee_first_name" />

            <EditText
                android:id="@+id/trainee_first_name"
                style="@style/settingsFieldEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/trainee_first_name"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                style="@style/settingsFieldHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trainee_last_name" />

            <EditText
                android:id="@+id/trainee_last_name"
                style="@style/settingsFieldEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/trainee_last_name"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                style="@style/settingsFieldHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trainee_email" />

            <EditText
                android:id="@+id/trainee_email"
                style="@style/settingsFieldEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/trainee_email"
                android:inputType="textEmailAddress" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView9"
                style="@style/settingsFieldHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trainee_phone" />

            <EditText
                android:id="@+id/trainee_phone"
                style="@style/settingsFieldEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/trainee_phone"
                android:inputType="phone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView11"
                style="@style/settingsFieldHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trainee_status" />

            <Spinner
                android:id="@+id/trainee_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:entries="@array/TraineeStatus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                style="@style/settingsFieldHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trainee_college" />

            <EditText
                android:id="@+id/trainee_college"
                style="@style/settingsFieldEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/trainee_college"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView12"
                style="@style/settingsFieldHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trainee_degree" />

            <EditText
                android:id="@+id/trainee_degree"
                style="@style/settingsFieldEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/trainee_degree"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView13"
                style="@style/settingsFieldHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trainee_major" />

            <EditText
                android:id="@+id/trainee_major"
                style="@style/settingsFieldEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/trainee_major"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView14"
                style="@style/settingsFieldHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trainee_optional_profile" />

            <EditText
                android:id="@+id/trainee_profile"
                style="@style/settingsFieldEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/trainee_optional_profile"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                style="@style/settingsFieldHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trainee_optional_skype" />

            <EditText
                android:id="@+id/trainee_skype"
                style="@style/settingsFieldEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/trainee_optional_skype"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView15"
                style="@style/settingsFieldHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trainee_optional_recruiter" />

            <EditText
                android:id="@+id/trainee_recruiter"
                style="@style/settingsFieldEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/trainee_optional_recruiter"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView19"
                style="@style/settingsFieldHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trainee_optional_screener" />

            <EditText
                android:id="@+id/trainee_screener"
                style="@style/settingsFieldEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/trainee_optional_screener"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView21"
                style="@style/settingsFieldHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trainee_optional_project" />

            <EditText
                android:id="@+id/trainee_project"
                style="@style/settingsFieldEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/trainee_optional_project"
                android:inputType="textPersonName" />

        </LinearLayout>

        <Button
            android:id="@+id/TM_btn_create_trainee"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/btn_add_trainee" />

    </LinearLayout>

</ScrollView>