<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_create_batch"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:hint="@string/batch_dialog_heading_name"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_create_batch_name_input"
                style="@style/materialDesignText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            >

            <AutoCompleteTextView
                android:hint="@string/batch_dialog_heading_training_name"
                android:id="@+id/spinner_createbatch_trainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            >

            <AutoCompleteTextView
                android:hint="@string/createbatch_cotrainer_header"
                android:id="@+id/spinner_createbatch_cotrainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            >

            <AutoCompleteTextView
                android:hint="@string/createbatch_trainingtype"
                android:id="@+id/spinner_create_batch_training_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            >

            <AutoCompleteTextView
                android:hint="@string/batch_dialog_heading_location"
                android:id="@+id/spinner_createbatch_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/batch_dialog_heading_skill"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_create_batch_skill_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                style="@style/materialDesignText"
                />

        </com.google.android.material.textfield.TextInputLayout>




        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_create_batch_start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/batch_dialog_heading_start_date"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_create_batch_start_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone"
                style="@style/materialDesignText"
                android:focusable="false"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_create_batch_end"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/batch_dialog_heading_end_date"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_create_batch_end_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                style="@style/materialDesignText"
                android:focusable="false"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/batch_dialog_heading_good_grade"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_create_batch_good_grade_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                style="@style/materialDesignText"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/batch_dialog_heading_passing_grade"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_create_batch_passing_grade_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                style="@style/materialDesignText"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_create_batch_create"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="15dp"
            android:text="@string/batch_dialog_create_button" />

        <Button
            android:id="@+id/btn_create_batch_cancel"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-48dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="20dp"
            android:text="@android:string/cancel" />

    </LinearLayout>


</ScrollView>