<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        style="@style/settingsFragmentContentWrapper">

        <LinearLayout
            style="@style/settingsHeaderWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/btnAddCategory"
                style="@style/addBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|end"
                android:text="@string/btn_add_category" />
        </LinearLayout>

        <TextView
            android:text="@string/title_active_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/settingsHeading"/>

        <View
            style="settingsStatusDivider"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/dividerGray" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvActiveCategories"
            style="@style/settingsRecyclerView"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:text="@string/title_stale_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/settingsHeading"/>

        <View
            style="settingsStatusDivider"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/dividerGray" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvStaleCategories"
            style="@style/settingsRecyclerView"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</layout>